<package>
  <name>octomap</name>
  <version>1.5.3</version>
  <description>The OctoMap library implements a 3D occupancy grid mapping approach, providing data structures and mapping algorithms in C++. The map implementation is based on an octree. See http://octomap.sf.net for details.</description>

  <author email="wurm@informatik.uni-freiburg.de">Kai M. Wurm</author>
  <author email="hornunga@informatik.uni-freiburg.de">Armin Hornung</author>
  <maintainer email="hornunga@informatik.uni-freiburg.de">Armin Hornung</maintainer>
  <license>BSD</license>

  <url type="website">http://octomap.sf.net</url>
  <url type="bugtracker">https://sourceforge.net/apps/trac/octomap</url>
  
  <buildtool_depend>catkin</buildtool_depend>
  
</package>
