<package>
  <name>octovis</name>
  <version>1.5.3</version>
  <description>octovis is visualization tool for the OctoMap library based on Qt and libQGLViewer. See http://octomap.sf.net for details.</description>

  <author email="wurm@informatik.uni-freiburg.de">Kai M. Wurm</author>
  <author email="hornunga@informatik.uni-freiburg.de">Armin Hornung</author>
  <maintainer email="hornunga@informatik.uni-freiburg.de">Armin Hornung</maintainer>
  <license>GPLv2</license>

  <url type="website">http://octomap.sf.net</url>
  <url type="bugtracker">https://sourceforge.net/apps/trac/octomap</url>
  

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>octomap</build_depend>
  <build_depend>libqglviewer-qt4-dev</build_depend>
  <build_depend>libqt4-dev</build_depend>
  <build_depend>libqt4-opengl-dev</build_depend>
 
  <run_depend>octomap</run_depend>
  <run_depend>libqglviewer-qt4</run_depend>
  <run_depend>libqtgui4</run_depend>
  <run_depend>libqt4-opengl</run_depend>
  
</package>
